--- a/client/src/page/Client/Auth/css/formSign.css
+++ b/client/src/page/Client/Auth/css/formSign.css
@@ -2,6 +2,14 @@
 
     text-align: start;
     font-weight: 600;
+ 
+
+}
+.sign-edit :where(.css-dev-only-do-not-override-5wsri9).ant-form-item .ant-form-item-label >label{
+    font-size: 1.7rem;
+}
+.sign-edit.ant-form-vertical .ant-form-item:not(.ant-form-item-horizontal) .ant-form-item-label, :where(.css-dev-only-do-not-override-5wsri9).ant-form-vertical .ant-form-item:not(.ant-form-item-horizontal) .ant-col-24.ant-form-item-label, :where(.css-dev-only-do-not-override-5wsri9).ant-form-vertical .ant-form-item:not(.ant-form-item-horizontal) .ant-col-xl-24.ant-form-item-label{
+    padding: 0 0 2px;
 }
 .sign-edit .ant-row{
     display: block;
