--- a/client/src/page/Client/Auth/css/formSign.css
+++ b/client/src/page/Client/Auth/css/formSign.css
@@ -14,6 +14,10 @@
 .sign-edit .ant-row{
     display: block;
 }
+.sign-edit .ant-btn-variant-solid{
+    background-color: #7500CF;
+    color: white;
+}
 .sign-edit .ant-input-outlined,
 .sign-edit .ant-select-outlined:not(.ant-select-customize-input) .ant-select-selector,
 .sign-edit .ant-input-number-outlined
