--- a/client/src/page/Client/Home/Component/css/customSlick.css
+++ b/client/src/page/Client/Home/Component/css/customSlick.css
@@ -1,5 +1,5 @@
 .slick-prev:before, .slick-next:before {
-    font-family: 'slick';
+    font-family: 'Roboto';
     font-size: 20px;
     line-height: 1;
     opacity: .75;
