--- a/client/src/page/Client/User/Order/css/TableEdit.css
+++ b/client/src/page/Client/User/Order/css/TableEdit.css
@@ -18,28 +18,37 @@ box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 .tableEdit .anticon svg{
     color: #7500CF;
 }
-.tableEdit :where(.css-dev-only-do-not-override-5wsri9).ant-pagination .ant-pagination-item-active{
+.tableEdit .ant-pagination .ant-pagination-item-active{
     background-color: #7500CF;
     color: white;
     border-color: #7500CF;
 }
-.tableEdit :where(.css-dev-only-do-not-override-5wsri9).ant-pagination .ant-pagination-item-active a{
+.tableEdit .ant-pagination .ant-pagination-item-active a{
     color: white;
 }
-.table-detail-order :where(.css-dev-only-do-not-override-5wsri9).ant-table-wrapper{
+.table-detail-order .ant-table-wrapper{
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .table-detail-order .ant-table-wrapper .ant-table-thead >tr>th,.tableEdit .ant-table-wrapper .ant-table-thead >tr>td{
     background: white;
+    text-align: center;
 }
 .table-detail-order .ant-table-wrapper .ant-table-thead >tr>th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan])::before, .tableEdit .ant-table-wrapper .ant-table-thead >tr>td:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan])::before{
     background:none;
 }
-.table-detail-order :where(.css-dev-only-do-not-override-5wsri9).ant-pagination .ant-pagination-item-active{
+.table-detail-order .ant-pagination .ant-pagination-item-active{
     background-color: #7500CF;
     color: white;
     border-color: #7500CF;
 }
-.table-detail-order :where(.css-dev-only-do-not-override-5wsri9).ant-pagination .ant-pagination-item-active a{
+.table-detail-order .ant-pagination .ant-pagination-item-active a{
+    color: white;
+}
+.table-detail-order .ant-pagination .ant-pagination-item-active{
+    /* background-color: #7500CF; */
+    color: white;
+    border-color: #7500CF;
+}
+.table-detail-order .ant-pagination .ant-pagination-item-active a{
     color: white;
 }
