--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@
 html, body {
     height: 100%;
     font-size: 62.5%; /* 1rem = 10px */
-    background-color: rgb(236, 236, 236);
+    /* background-color: #ececec; */
 }
 body {
     line-height: 1;
