--- a/client/src/page/Client/Home/Component/css/Carousel.css
+++ b/client/src/page/Client/Home/Component/css/Carousel.css
@@ -1,20 +1,36 @@
-
-
 .carousel{
 	font-family: 'roboto';
-    width: 80%;
+    width: 200%;
     height: 750px;
-    border-radius: 17px;
-    overflow: hidden;
-    margin:  0 0 0 0;
     position: relative;
     overflow: hidden;
-    transition: 2s;
-
 }
 
+/* Media queries cho responsive */
+@media screen and (max-width: 1440px) {
+    .carousel {
+        width: 150%;
+    }
+}
 
+@media screen and (max-width: 1024px) {
+    .carousel {
+        width: 120%;
+    }
+}
 
+@media screen and (max-width: 768px) {
+    .carousel {
+        width: 100%;
+        height: 500px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .carousel {
+        display: none;
+    }
+}
 
 .carousel .frameSlide .item{
     width: 200px;
@@ -62,13 +78,12 @@
     position: absolute;
     top: 50%;
     left: 150px;
+    transform: translateY(-50%);
     width: 500px;
     text-align: justify;
     color: #eee;
-    transform: translateY(-50%);
-    display: none;
+}
 
-} 
 .item:nth-child(1) .content{
     display: flex;
     flex-direction: column;
@@ -248,5 +263,55 @@
     animation: animate 0.5s 0.9s linear 1 forwards;
 
 
+}
+
+@media screen and (max-width: 1440px) {
+    .item .content {
+        left: 100px;
+        width: 400px;
+    }
+    .item .content .title,
+    .item .content .category {
+        font-size: 60px;
+    }
+    .item .content .button {
+        grid-template-columns: repeat(2,110px);
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .item .content {
+        left: 80px;
+        width: 350px;
+    }
+    .item .content .title,
+    .item .content .category {
+        font-size: 50px;
+    }
+    .item .content .info {
+        font-size: 14px;
+    }
+    .item .content .button {
+        grid-template-columns: repeat(2,100px);
+        grid-template-rows: 35px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .item .content {
+        left: 50px;
+        width: 300px;
+    }
+    .item .content .title,
+    .item .content .category {
+        font-size: 40px;
+    }
+    .item .content .info {
+        font-size: 13px;
+    }
+    .item .content .button {
+        grid-template-columns: repeat(2,90px);
+        grid-template-rows: 30px;
+    }
 }
 
