--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,11 @@
 :root {
-    --custom-color:blue; /* Giá trị mặc định */
-  }
-  
-  /* Sử dụng biến trong Tailwind */
-  .color-custom {
-    background-color: var(--custom-color);
-  }
-  .text-custom{
-  
-  }
+  --custom-color: blue; /* Màu mặc định */
+}
+
+.color-custom {
+  background-color: var(--custom-color); /* Sử dụng biến màu */
+}
+
+.text-custom {
+  color: var(--custom-color); /* Sử dụng biến màu cho văn bản */
+}
