--- a/client/src/template/Component/Header/modalUserCustom.css
+++ b/client/src/template/Component/Header/modalUserCustom.css
@@ -1,6 +1,6 @@
 .dropUserCustom .ant-btn-variant-outlined, .ant-btn-variant-dashed{
-    border: 1px solid #7500CF;
-    color:#7500CF;
+    border: 1px solid var(--custom-color);
+    color:var(--custom-color);
 }
 
 .dropUserCustom .ant-btn-variant-outlined:not(:disabled):not(.ant-btn-disabled):hover, .ant-btn-variant-dashed:not(:disabled):not(.ant-btn-disabled):hover {
