--- a/client/src/page/Client/Home/Component/css/Carousel.css
+++ b/client/src/page/Client/Home/Component/css/Carousel.css
@@ -75,7 +75,7 @@
     gap: 20px;
 }
 .item .content .author{
-    color: blueviolet;
+    color: var(--custom-color);
     font-weight: bold;
     letter-spacing: 10px;
     opacity: 0;
@@ -91,7 +91,7 @@
 
 }
 .item .content .category{
-    color: blueviolet;
+    color: var(--custom-color);
     opacity: 0;
 
 }
@@ -115,7 +115,7 @@
 }
  .item .content .button button{
     border: none;
-    background-color: blueviolet;
+    background-color: var(--custom-color);
     letter-spacing: 3px;
     font-weight: 500;
     font-size: 13px;
