--- a/client/src/page/Client/Pay/css/formEdit.css
+++ b/client/src/page/Client/Pay/css/formEdit.css
@@ -10,7 +10,7 @@
 .formEdit .ant-select-outlined:not(.ant-select-customize-input) .ant-select-selector,
 .formEdit .ant-input-number-outlined
 {
-    border-color:#7500CF ;
+    border-color:var(--custom-color) ;
     height: 4.5rem;
 }
 /*  */
@@ -29,25 +29,25 @@
     margin-bottom: 1rem;
 }
 .formEdit .ant-radio-wrapper .ant-radio-checked .ant-radio-inner{
-    border-color: #7500CF;
-    background: #7500CF;
+    border-color: var(--custom-color);
+    background: var(--custom-color);
 }
 .ant-steps .ant-steps-item-process .ant-steps-item-icon{
-    border-color: #7500CF;
-    background: #7500CF;  
+    border-color: var(--custom-color);
+    background: var(--custom-color);  
 }
 .ant-progress .ant-progress-inner:not(.ant-progress-circle-gradient) .ant-progress-circle-path{
-    stroke: #7500CF;
+    stroke: var(--custom-color);
 }
 .ant-steps .ant-steps-item-finish .ant-steps-item-icon{
-    border: 1px solid #7500CF;
+    border: 1px solid var(--custom-color);
 
-    background: #7500CF;
+    background: var(--custom-color);
 }
 .ant-steps .ant-steps-item-finish .ant-steps-item-icon >.ant-steps-icon{
     color: white;
 }
 .ant-steps .ant-steps-item-finish>.ant-steps-item-container>.ant-steps-item-tail::after{
-    background: #7500CF;
+    background: var(--custom-color);
     
 }
