--- a/client/src/page/Client/User/Order/css/TableEdit.css
+++ b/client/src/page/Client/User/Order/css/TableEdit.css
@@ -1,6 +1,6 @@
 
 .tableEdit .ant-table-wrapper .ant-table-thead >tr>th,.tableEdit .ant-table-wrapper .ant-table-thead >tr>td {
-    background: #7500CF;
+    background: var(--custom-color);
 color:white;
 text-align: center;
 box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
