--- a/client/src/page/Client/User/Order/css/TableEdit.css
+++ b/client/src/page/Client/User/Order/css/TableEdit.css
@@ -55,3 +55,35 @@
 .table-detail-order .ant-pagination .ant-pagination-item-active a {
     color: white;
 }
+
+
+/* Tùy chỉnh thanh cuộn */
+.scrollbar-custom::-webkit-scrollbar {
+    height: 8px; /* Chiều cao thanh cuộn ngang */
+  }
+  
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    background: #cccccc; /* Màu thanh cuộn */
+    border-radius: 4px; /* Bo tròn */
+  }
+  
+  .scrollbar-custom::-webkit-scrollbar-thumb:hover {
+    background: #a0a0a0; /* Màu khi hover */
+  }
+  
+  /* Đảm bảo bảng trông đẹp trên các màn hình nhỏ */
+  .tableEdit {
+    max-width: 100%;
+  }
+  
+  .tableEdit table {
+    min-width: 600px; /* Đặt chiều rộng tối thiểu cho bảng */
+  }
+  
+  .tableEdit th,
+  .tableEdit td {
+    white-space: nowrap; /* Không xuống dòng nội dung */
+    min-width: 120px; /* Kích thước tối thiểu của cột */
+    text-align: center; /* Căn giữa nội dung */
+  }
+  
