update part five

--- a/client/src/page/Admin/Order/OrderDetail/OrderDetail.css
+++ b/client/src/page/Admin/Order/OrderDetail/OrderDetail.css
@@ -1,4 +1,17 @@
     
+@media print {
+  body * {
+    visibility: hidden;
+  }
+  .printable, .printable * {
+    visibility: visible;
+  }
+  .printable {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+}
 
 .scrollbar::-webkit-scrollbar {
     width: 5px; 
