--- a/client/src/page/Client/User/UserDetail/css/ModalEdit.css
+++ b/client/src/page/Client/User/UserDetail/css/ModalEdit.css
@@ -1,13 +1,13 @@
-.button-edit :where(.css-dev-only-do-not-override-5wsri9).ant-btn-variant-outlined, :where(.css-dev-only-do-not-override-5wsri9).ant-btn-variant-dashed{
+.button-edit .ant-btn-variant-outlined, :where(.css-dev-only-do-not-override-5wsri9).ant-btn-variant-dashed{
     border:1px solid var(--custom-color);
     color:#7500CF;
 }
-.button-edit :where(.css-dev-only-do-not-override-5wsri9).ant-btn-variant-outlined:not(:disabled):not(.ant-btn-disabled):hover, :where(.css-dev-only-do-not-override-5wsri9).ant-btn-variant-dashed:not(:disabled):not(.ant-btn-disabled):hover {
+.button-edit .ant-btn-variant-outlined:not(:disabled):not(.ant-btn-disabled):hover, :where(.css-dev-only-do-not-override-5wsri9).ant-btn-variant-dashed:not(:disabled):not(.ant-btn-disabled):hover {
     color: #6308a8;
     border-color: #6308a8;
     background: #ffffff;
 }
-.button-edit :where(.css-dev-only-do-not-override-5wsri9).ant-btn-variant-solid {
+.button-edit .ant-btn-variant-solid {
     background: #7500CF;
     color: white;
 }
@@ -21,4 +21,19 @@
 }
 :where(.css-dev-only-do-not-override-ni1kz0).ant-form-item{
 margin-bottom: 10px;    
+}
+.button-one.ant-btn-variant-solid {
+    background-color: var(--custom-color);
+    color:white;
+    padding: 1.8rem 0;
+}
+.button-one :where(.css-dev-only-do-not-override-ni1kz0).ant-btn-variant-solid:not(:disabled):not(.ant-btn-disabled):hover {
+    color: white;
+    background-color: var(--custom-color);
+    
+
+}
+.button-one .ant-btn-variant-solid {
+    background: #7500CF;
+    color: white;
 }
